Test Case error fix and removed field reference from permission sert

--- a/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
+++ b/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
@@ -57,7 +57,9 @@ public class TriggerLeadTriggerHandler
         LeadHelper.beforeInsert_UpdateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);*/
         LeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.leadPriorityScore(trigger.new);
-		LeadHelper.leaddeDuplication(trigger.new);        
+		LeadHelper.leaddeDuplication(trigger.new);
+		LeadHelper.updateDealerAssignmentDate(trigger.new);
+		LeadHelper.DueDateForAssignedDealer(trigger.new);        
         //AuLeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
     }
     if(trigger.isBefore && trigger.isUpdate)
@@ -66,7 +68,9 @@ public class TriggerLeadTriggerHandler
         /*UtilLead.beforeInsert_updateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.beforeInsert_UpdateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);*/
         LeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
-        LeadHelper.auBeforeUpdateGenericVehicleRecordOnVehicleRelationship(trigger.new,oldmap,newmap);                
+        LeadHelper.auBeforeUpdateGenericVehicleRecordOnVehicleRelationship(trigger.new,oldmap,newmap);
+        LeadHelper.updateDealerAssignmentDate(trigger.new);
+        LeadHelper.DueDateForAssignedDealer(trigger.new);
        // AuLeadHelper.auBefore_Insert_Update_Events(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
        // AuLeadHelper.auBeforeUpdateGenericVehicleRecordOnVehicleRelationship(trigger.new,oldmap,newmap);
     }
