Address Validation Related changes

--- a/src/main/metadata/classes/UtilAddressTranslation.cls
+++ b/src/main/metadata/classes/UtilAddressTranslation.cls
@@ -15,7 +15,7 @@ public class UtilAddressTranslation
                   Province_TR29__c,Province_TR3__c,Province_TR30__c,Province_TR31__c,Province_TR32__c,Province_TR33__c,Province_TR34__c,Province_TR35__c,Province_TR36__c,
                   Province_TR37__c,Province_TR38__c,Province_TR39__c,Province_TR4__c,Province_TR40__c,Province_TR41__c,Province_TR42__c,Province_TR43__c,Province_TR44__c,
                   Province_TR45__c,Province_TR46__c,Province_TR47__c,Province_TR5__c,Province_TR6__c,Province_TR7__c,Province_TR8__c,Province_TR9__c 
-                  from ProvinceTranslation__mdt where MD__c = 'JP'];
+                  from ProvinceTranslation__mdt where MD__c =: market];
         
         addtrmap.put(prolist.Province_EN1__c,prolist.Province_TR1__c);
         addtrmap.put(prolist.Province_EN2__c, prolist.Province_TR2__c);
